x-overflow fix

--- a/Group Pages/css/history.css
+++ b/Group Pages/css/history.css
@@ -1,3 +1,6 @@
+body {
+    overflow-x: hidden;
+}
 figure img {
     max-width: 100%;
     height: auto;
